--- a/src/index.css
+++ b/src/index.css
@@ -104,10 +104,9 @@ body {
 .techstack {
   width: 100%;
   position: relative;
-  height: var(--vh);
-  margin: auto;
-  margin-top: 50px;
-  margin-bottom: -100px;
+  height: 100vh;
+  min-height: 600px;
+  margin: 50px auto;
 }
 
 .techstack h2 {
@@ -115,19 +114,26 @@ body {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 120px;
+  top: 100px;
   left: 0;
   font-weight: 400;
   text-transform: uppercase;
+  z-index: 10;
+  pointer-events: none;
 }
 
-@media screen and (min-width: 768px) {
-  body {
-    --cWidth: 94%;
-  }
+.tech-canvas {
+  width: 100% !important;
+  height: 100% !important;
 }
+
 @media screen and (max-width: 900px) {
+  .techstack {
+    height: 70vh;
+    min-height: 500px;
+  }
   .techstack h2 {
-    font-size: 40px;
+    font-size: 45px;
+    top: 60px;
   }
 }
